unpackaged/main/default/objects/litify_time__lit_Billing_Preference_User_Junction__c/litify_time__lit_Billing_Preference_User_Junction__c.object-meta.xml
<CustomObject>
    <label>Billing Preference User Junction</label>
    <nameField>
        <displayFormat>BPU-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Preference User Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>