unpackaged/main/default/objects/litify_time__lit_Billing_Preference_User_Junction__c/fields/litify_time__lit_Billing_Preference__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billing_Preference__c</fullName>
    <label>Billing Preference</label>
    <referenceTo>litify_time__lit_Billing_Preference__c</referenceTo>
    <relationshipLabel>Billing Preference User Junctions</relationshipLabel>
    <relationshipName>Billing_Preference_User_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>