unpackaged/main/default/objects/litify_time__lit_Billing_Preference_User_Junction__c/fields/litify_time__lit_Responsible_Attorney__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Responsible_Attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responsible Attorney</label>
    <type>Checkbox</type>
</CustomField>