unpackaged/main/default/objects/litify_time__lit_Billing_Preference_User_Junction__c/fields/litify_time__lit_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timekeeper</fullName>
            </value>
            <value>
                <fullName>Biller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>