unpackaged/main/default/objects/litify_time__lit_Billing_Preference_User_Junction__c/fields/litify_time__lit_User__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Billing_Preference_User_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>