unpackaged/main/default/objects/litify_time__lit_Billing_Preference_User_Junction__c/validationRules/litify_time__User_can_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_time__User_can_not_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(litify_time__lit_User__c) ||  ISBLANK(litify_time__lit_User__c)</errorConditionFormula>
    <errorDisplayField>litify_time__lit_User__c</errorDisplayField>
    <errorMessage>User lookup is required.</errorMessage>
</ValidationRule>